fix(components): fix post-mainnavigation overflow

--- a/packages/components/src/components/post-mainnavigation/post-mainnavigation.scss
+++ b/packages/components/src/components/post-mainnavigation/post-mainnavigation.scss
@@ -70,6 +70,7 @@ post-mainnavigation {
   // desktop styles
   @include media.min(lg) {
     display: block;
+    overflow-x: hidden;
 
     nav {
       max-width: 100%;
